# fluffy-barnacle

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dependabot-auto-merge.yml  docs.yml  test.yml
csproxy/: __init__.py  __main__.py  _worker.py  accounts.py  chains.py  cli.py  cloudflare.py  codespace.py  completion.py  display.py  github.py  locking.py  proxy.py  runner.py  serve.py  services.py  state.py  templates.py  tools.py  tunnel.py  wg_constants.py  wg_monitor.py  wg_routes.py  wg_setup.py  wireguard.py
csproxy/mcp/: __init__.py  server.py
csproxy/relays/: __init__.py  exit_relay.py  socks_relay.py
csproxy/tui/: __init__.py  app.py
csproxy/utils/: __init__.py  config.py  deps.py  errors.py  interaction.py  logging.py
docs/: index.md  quickstart.md
docs/development/: architecture.md  contributing.md  python-api.md
docs/stylesheets/: extra.css
docs/use-cases/: burp-integration.md  file-hosting.md  index.md  proxy-rotation.md  vpn-tunneling.md
docs/user-guide/: configuration.md  installation.md
docs/user-guide/command-reference/: cs-mcp.md  cs-proxy.md  cs-serve.md  cs-tools.md  cs-tui.md  cs-wg.md  index.md
tests/: conftest.py  test_api_contracts.py  test_fake_gh_integration.py  test_github.py  test_installation.py  test_interaction.py  test_mcp.py  test_phase2_features.py  test_phase2_infrastructure.py  test_phase3_chains.py  test_phase3_hardening.py  test_phase4_multi_account_chains.py  test_phase5_operator_features.py  test_serve_wg_security.py  test_services.py  test_tui.py
